Trying to avoid overflow

--- a/style.css
+++ b/style.css
@@ -467,6 +467,9 @@ footer {
     font-family: sans-serif;
     text-decoration: none;
     text-transform: uppercase;
+    white-space: nowrap;
+    overflow: hidden;
+    
   }
 
   .tag:nth-of-type(2) {
